3-tier-voteApp/backendDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: ns-test
  labels:
    app: voteapp
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voteapp
      tier: backend
  template:
    metadata:
      labels:
        app: voteapp
        tier: backend
    spec:
      containers:
      - name: django-app
        image: abinetdegefa/voteapp-backend:v1
        ports:
        - containerPort: 8000
        # Injecting Configuration and Secrets as Environment Variables
