3-tier-voteApp/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ns-test
spec:
  type: ClusterIP
  selector:
    app: voteapp
    tier: backend
  ports:
  - port: 8000
    targetPort: 8000
