3-tier-voteApp/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
  clusterIP: None # This makes it a "Headless" service
